Added the voice transmit program.
Allow for multiple STARnet Digital permanent users.

20140326
--------

Fixed the voice transmit program and added diagnostics.
Fixed the command line remote control program, hopefully.

20140602
--------

Add StarNet logging for remote control events.
Ensure that duplicate link requests don't initiate a status message.
Stop taking DExtra addresses from xreflector.net
Added the "       W" and "       M" commands to send weather and messages respectively.

20150210
--------

Updated the DCS and D-Plus hosts files.
First attempt to fix the multiple linking bug.

20150213
--------

Slight modification to completely fix the multiple linking bug.

20150303
--------

A slightly less agressive fix for multiple linking.
Updated the DExtra hosts file.

20150308
--------

Include .mk file for the Pi2.
Increased the network timeout from one second to two seconds.

20150507
--------

Update the DExtra_Hosts.txt file.
Handle malformed D-Plus authentication packets better.
Update the copyright date in the GUI Help dialogue boxes.

20150615
--------

Enable data dumping in the D-RATS server.
Rearrange the source code slightly.
Use hostnames in the DPlus_Hosts.txt file.
Update the DExtra_Hosts.txt file.
Revert to the CIRCDDB library to its previous incarnation.

20150820
--------
Move to the new CCS addressing.

20151116
--------

CCS7 cleanups and fixes.
Updated DExtra hosts file.
Updated DPlus hosts file to use IP addresses again.
Fix crashing bug in the gateway (from Michael DL1BFF).

2015xxxx
--------

Fix header repeater crashing bug (from Michael DL1BFF).
New slow data encoder from F4FXL.
Added APRSTransmit program from F4FXL.

20180509
--------

Move to wxWidgets-3.0.x.
UPdate to VS2017 on Windows for 32 and 64 bit compilation.
Simplify the Linux build.

20180627
--------

Support the GPS data from the Kenwood TH-D74.

2018xxxx
--------

Add support for external GPS input for mobile systems.
